# TrustBench

./: LICENSE  README.md  pyproject.toml  requirements.txt
config/: kaggle_datasets.json
config/datasets/: BM.json  CIFAR10.json  CIFAR100.json  GC.json  HP.json  PD.json
config/models/: BM1.json  BM10.json  BM11.json  BM12.json  BM2.json  BM3.json  BM4.json  BM5.json  BM6.json  BM7.json  BM8.json  BM9.json  CIFAR10.json  GC1.json  GC2.json  GC3.json  GC4.json  GC5.json  GC6.json  GC7.json  GC8.json  GC9.json  HP1.json  HP2.json  HP3.json  HP4.json  PD1.json  PD2.json  PD3.json  PD4.json
data/BM/test/: x.csv  y.csv
data/BM/train/: x.csv  y.csv
data/BM/val/: x.csv  y.csv
data/CIFAR10/test/: x.csv  y.csv
data/CIFAR10/train/: y.csv
data/CIFAR10/val/: x.csv  y.csv
data/GC/test/: x.csv  y.csv
data/GC/train/: x.csv  y.csv
data/GC/val/: x.csv  y.csv
data/HP/test/: x.csv  y.csv
data/HP/train/: x.csv  y.csv
data/HP/val/: x.csv  y.csv
data/PD/test/: x.csv  y.csv
data/PD/train/: x.csv  y.csv
data/PD/val/: x.csv  y.csv
predictions/CIFAR10/: CIFAR10.csv
predictions/HP/: HP1.csv  HP2.csv  HP3.csv  HP4.csv
predictions/PD/: PD1.csv  PD2.csv  PD3.csv  PD4.csv
trustbench/: __init__.py  main.py
trustbench/core/: dataset.py  model.py
trustbench/core/sources/: kaggle.py  keras.py  source.py
trustbench/utils/: misc.py  paths.py
